--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,7 @@
 # 站点信息
-VITE_SITE_NAME = "無名の主页" # 名称
-VITE_SITE_AUTHOR = "無名" # 作者
-VITE_SITE_KEYWORDS = "無名,个人主页" # 关键词
+VITE_SITE_NAME = "陈蔚星の主页" # 名称
+VITE_SITE_AUTHOR = "Satellite" # 作者
+VITE_SITE_KEYWORDS = "陈蔚星,个人主页" # 关键词
 VITE_SITE_DES = "一个默默无闻的主页" # 站点简介
 VITE_SITE_URL = "imsyy.top" # 站点地址
 VITE_SITE_LOGO = "/images/icon/favicon.ico" # 站点主图标
@@ -10,7 +10,7 @@ VITE_SITE_APPLE_LOGO = "/images/logo/apple-touch-icon.png" # Apple 端图标
 
 # 简介文本
 VITE_DESC_HELLO = "Hello World !"
-VITE_DESC_TEXT = "一个建立于 21 世纪的小站，存活于互联网的边缘"
+VITE_DESC_TEXT = "一个建立于 21 世纪的小站，致力于方便生活和学习的空间"
 VITE_DESC_HELLO_OTHER = "Oops !"
 VITE_DESC_TEXT_OTHER = "哎呀，这都被你发现了（ 再点击一次可关闭 ）"
 
@@ -31,11 +31,11 @@ VITE_WEATHER_KEY = ""
 # 建站日期
 ## 若不需要，请设为空即可
 ## 请按照 YYYY-MM-DD 格式填写或者仅填写年份 YYYY
-VITE_SITE_START = "2020-10-24"
+VITE_SITE_START = "2024-7-11"
 
 # ICP 备案号
 ## 若不需要，请设为空即可
-VITE_SITE_ICP = "豫ICP备2022018134号-1"
+VITE_SITE_ICP = ""
 
 # 歌曲 API 地址
 ## 请参照 https://github.com/xizeyoupan/Meting-API#deno-deploy 进行 API 服务部署
